feat: add DataStore crud
